- Added a fresh new Search UI - Fixed the collapse/expand issue when clicked repeatedly - Remove extra space from the navbar header icons

--- a/assets/html/scss/documenter-dark.scss
+++ b/assets/html/scss/documenter-dark.scss
@@ -73,6 +73,7 @@ $input-placeholder-color: rgba($input-color, 0.3);
 $search-result-link-text-color: #333;
 $search-result-link-text-background-color: #f1f5f9;
 $search-result-title-text-color: whitesmoke;
+$search-modal-kbd-color: rgba(245, 245, 245, 0.6);
 
 $button-static-color: $grey-lighter;
 $button-static-background-color: $background;
